--- a/ui/ooview.ui
+++ b/ui/ooview.ui
@@ -21,7 +21,7 @@
        <enum>QLayout::SetMaximumSize</enum>
       </property>
       <item row="2" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="my_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
